--- a/index.html
+++ b/index.html
@@ -74,7 +74,78 @@
     </nav>
 
     <!-- Carousel o diapositivas-->
+    <div id="demo" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/img/carousel1.jpg" alt="Los Angeles" width="100%" height="30px" data-toggle="tooltip" data-placement="right" title="">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/img/carousel2.jpg" alt="Chicago" width="100%" height="200" data-toggle="tooltip" data-placement="right" title="Moáis en la isla de pascua">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/img/carousel3.jpg" alt="New York" width="100%" height="500" data-toggle="tooltip" data-placement="right" title="Un Pingüino al sur del país">
+            </div>
+        </div>
 
+        <!-- Flechas de izquierda y derecha del carousel-->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon" data-toggle="tooltip" data-placement="right" title="Anterior"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon" data-toggle="tooltip" data-placement="right" title="Siguiente"></span>
+        </a>
+    </div>
+
+    <!-- Título de Quiénes somos. Se oculta al tener un tamamio menor a md-->
+    <h1 class="quienessomos py-5 text-white d-none d-md-block" id="dos">¿Quiénes Somos?</h1>
+
+    <!-- Linea horizontal Quiénes Somos. Se ocultan al tener un tamamio menor a md-->
+    <hr class="bg-info py-1 mx-2 d-none d-md-block">
+
+    <!-- Tarjetas de quiénes somos, estas tarjetas se ocultan al tener un tamamio menor a md -->
+    <div class="container-fluid py-3 d-none d-md-block">
+        <div class="card-deck">
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="fa fa-solid fa-plane fa-4x p-3 mb-2 bg-info text-white tamanioIconCard" data-toggle="tooltip" data-placement="right" title="Avión"></div>
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, itaque quia aliquam impedit delectus commodi. Facilis eos quos dolores possimus, unde perspiciatis placeat labore doloremque ipsa, animi, tempora quia accusamus. Deleniti
+                        adipisci quasi laboriosam illo doloribus. Nostrum doloremque sit deleniti eligendi tempora quam rerum saepe soluta repudiandae! Nam unde dolores, perspiciatis, in obcaecati suscipit, est ullam minima dolorum iure possimus! Laboriosam
+                        necessitatibus rerum nemo sunt distinctio vel eum assumenda reprehenderit, earum magnam dolores? Natus odio in, est omnis perspiciatis impedit incidunt amet animi voluptatibus et porro pariatur. Ullam, voluptatibus minima. Delectus,
+                        explicabo, unde et nesciunt modi, dicta voluptates rem sapiente perferendis eveniet dolorem mollitia impedit quasi voluptatibus debitis voluptatum consectetur autem aliquam porro placeat. Accusamus aspernatur odit expedita praesentium
+                        sapiente. Magnam, repellat totam amet illo repudiandae aspernatur ratione dolores neque quas? Sit quae modi, error, dignissimos fuga nam ipsum amet placeat fugiat assumenda voluptate numquam consequuntur eveniet suscipit exercitationem
+                        vel?
+                    </p>
+                </div>
+            </div>
+
+            <div class="card border-0">
+                <div class="card-body">
+                    <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, itaque quia aliquam impedit delectus commodi. Facilis eos quos dolores possimus, unde perspiciatis placeat labore doloremque ipsa, animi, tempora quia accusamus. Deleniti
+                        adipisci quasi laboriosam illo doloribus. Nostrum doloremque sit deleniti eligendi tempora quam rerum saepe soluta repudiandae! Nam unde dolores, perspiciatis, in obcaecati suscipit, est ullam minima dolorum iure possimus! Laboriosam
+                        necessitatibus rerum nemo sunt distinctio vel eum assumenda reprehenderit, earum magnam dolores? Natus odio in, est omnis perspiciatis impedit incidunt amet animi voluptatibus et porro pariatur. Ullam, voluptatibus minima. Delectus,
+                        explicabo, unde et nesciunt modi, dicta voluptates rem sapiente perferendis eveniet dolorem mollitia impedit quasi voluptatibus debitis voluptatum consectetur autem aliquam porro placeat. Accusamus aspernatur odit expedita praesentium
+                        sapiente. Magnam, repellat totam amet illo repudiandae aspernatur ratione dolores neque quas? Sit quae modi, error, dignissimos fuga nam ipsum amet placeat fugiat assumenda voluptate numquam consequuntur eveniet suscipit exercitationem
+                        vel?
+                    </p>
+                    <div class="fa fa-solid fa-mountain fa-4x p-3 mb-2 bg-info text-white tamanioIconCard" data-toggle="tooltip" data-placement="right" title="Montaña"></div>
+
+                </div>
+            </div>
+
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="fa fa-solid fa-route fa-4x p-3 mb-2 bg-info text-white tamanioIconCard" data-toggle="tooltip" data-placement="right" title="Ruta"></div>
+                    <p class="card-text ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia, itaque quia aliquam impedit delectus commodi. Facilis eos quos dolores possimus, unde perspiciatis placeat labore doloremque ipsa, animi, tempora quia accusamus. Deleniti
+                        adipisci quasi laboriosam illo doloribus. Nostrum doloremque sit deleniti eligendi tempora quam rerum saepe soluta repudiandae! Nam unde dolores, perspiciatis, in obcaecati suscipit, est ullam minima dolorum iure possimus! Laboriosam
+                        necessitatibus rerum nemo sunt distinctio vel eum assumenda reprehenderit, earum magnam dolores? Natus odio in, est omnis perspiciatis impedit incidunt amet animi voluptatibus et porro pariatur. Ullam, voluptatibus minima. Delectus,
+                        explicabo, unde et nesciunt modi, dicta voluptates rem sapiente perferendis eveniet dolorem mollitia impedit quasi voluptatibus debitis voluptatum consectetur autem aliquam porro placeat. Accusamus aspernatur odit expedita praesentium
+                        sapiente. Magnam, repellat totam amet illo repudiandae aspernatur ratione dolores neque quas? Sit quae modi, error, dignissimos fuga nam ipsum amet placeat fugiat assumenda voluptate numquam consequuntur eveniet suscipit exercitationem
+                        vel?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- CDN de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
