Se agrega apartado de Destacados

--- a/index.html
+++ b/index.html
@@ -147,6 +147,74 @@
         </div>
     </div>
 
+    <!--Titulo de Destacados -->
+    <h1 class="quienessomos py-5 text-white" id="tres">Destacados</h1>
+
+    <!-- Linea horizontal Destacados-->
+    <hr class="bg-info py-1 mx-2">
+
+    <!-- contenedor de cards-->
+    <div class="container-fluid">
+        <!-- Fila -->
+        <div class="row">
+            <!-- Columna y tarjetas 1-->
+            <div class="col-12  col-lg-3">
+                <div class="card-group">
+                    <div class="card pb-5 col-12 p-3 mb-2 bg-info text-white">
+                        <img src="assets/img/card1.jpg" class="card-img-top" alt="Paisaje">
+                        <div class="card-body bg-info">
+                            <p class="card-text">
+                                <p>Lorem ipsum dolor sit amet</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente soluta inventore, perspiciatis itaque, facere accusamus cumque facilis sed accusantium, impedit commodi? Eligendi unde repudiandae
+                                sequi voluptate alias amet soluta aspernatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Columna y tarjetas 2-->
+            <div class="col-12  col-lg-3">
+                <div class="card-group">
+                    <div class="card pb-5 col-12 p-3 mb-2 bg-info text-white">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="Paisaje">
+                        <div class="card-body bg-info">
+                            <p class="card-text">
+                                <p>Lorem ipsum dolor sit amet</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente soluta inventore, perspiciatis itaque, facere accusamus cumque facilis sed accusantium, impedit commodi? Eligendi unde repudiandae
+                                sequi voluptate alias amet soluta aspernatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Columna y tarjetas 3-->
+            <div class="col-12  col-lg-3">
+                <div class="card-group">
+                    <div class="card pb-5 col-12 p-3 mb-2 bg-info text-white">
+                        <img src="assets/img/card3.jpg" class="card-img-top" alt="Paisaje">
+                        <div class="card-body bg-info">
+                            <p class="card-text">
+                                <p>Lorem ipsum dolor sit amet</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente soluta inventore, perspiciatis itaque, facere accusamus cumque facilis sed accusantium, impedit commodi? Eligendi unde repudiandae
+                                sequi voluptate alias amet soluta aspernatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Columna y tarjetas 4-->
+            <div class="col-12  col-lg-3">
+                <div class="card-group">
+                    <div class="card pb-5 col-12 p-3 mb-2 bg-info text-white">
+                        <img src="assets/img/card4.jpg" class="card-img-top" alt="Paisaje">
+                        <div class="card-body bg-info">
+                            <p class="card-text">
+                                <p>Lorem ipsum dolor sit amet</p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente soluta inventore, perspiciatis itaque, facere accusamus cumque facilis sed accusantium, impedit commodi? Eligendi unde repudiandae
+                                sequi voluptate alias amet soluta aspernatur.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- CDN de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
