--- a/index.html
+++ b/index.html
@@ -215,6 +215,70 @@
         </div>
     </div>
 
+    <!--Titulo de Contacto -->
+    <h1 class="quienessomos py-5 text-white" id="cuatro">Contacto</h1>
+
+    <!-- Linea horizontal Contacto-->
+    <hr class="bg-info py-1 mx-2">
+
+    <!-- Formulario de contacto -->
+    <div class="container alinearFormulario">
+        <form>
+            <!-- Nombre y Apellido -->
+            <div class="form-row">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="text-white">Nombre</label>
+                    <input type="text" class="form-control" placeholder="Ingresa tu Nombre">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="text-white">Apellido</label>
+                    <input type="text" class="form-control" placeholder="Ingresa tu Apellido">
+                </div>
+            </div>
+            <br>
+            <!-- Correo Electrónico -->
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputEmail4" class="text-white">E-mail</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Ingresa tu Correo Electrónico">
+                </div>
+            </div>
+
+            <!-- Teléfono -->
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputAddress" class="text-white">Teléfono</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Ingresa tu Teléfono">
+                </div>
+            </div>
+
+            <!-- Comentario -->
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1" class="text-white"> Ingresa tu Comentario... </label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingresa aquí tu comentario"></textarea>
+            </div>
+            <br>
+
+            <!-- Lista Seleccionable para elegir tu lugar favorito-->
+            <div class="form-row">
+                <div class="form-group col-md-4 text-white">
+                    <label for="inputState">Selecciona tu lugar favorito</label>
+                    <select id="inputState" class="form-control">
+                    <option selected>Lugares de Chile...</option>
+                    <option>Zona norte</option>
+                    <option >Zona Centro</option>
+                    <option >Zona Sur</option>
+                    <option >Isla de Pascua</option>
+                    <option >La Antártida</option>
+                  </select>
+                </div>
+            </div>
+            <!-- Boton de Enviar -->
+            <button type="submit" class="btn btn-primary my-lg-4 text-md-center mb-5" data-toggle="tooltip" data-placement="right" title="Enviar información ingresada en el formulario"> Enviar </button>
+        </form>
+    </div>
+
     <!-- CDN de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
