--- a/index.html
+++ b/index.html
@@ -279,6 +279,26 @@
         </form>
     </div>
 
+    <!-- Footer -->
+    <footer>
+        <section>
+            <div class="container-fluid bg-info py-3">
+                <div class="row">
+                    <div class="col-lg-5 text-center  margintop">
+                        <p class="h2 text-white ">VIAJES CHILE</p>
+                    </div>
+                    <!-- Iconos pie de pagina -->
+                    <div class="col-lg-7 margintop col-12 text-center">
+                        <a href="https://github.com/" target="_blank"><i class="fab fa-brands fa-github-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Github"></i></a>
+                        <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fa-brands fa-linkedin fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Linkedin"></i></a>
+                        <a href="https://twitter.com/" target="_blank"> <i class="fab fa-brands fa-twitter-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Twitter"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <i class="fab fa-brands fa-facebook-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Facebook"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
+
     <!-- CDN de JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
