--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <!-- Diseñador de la página web -->
     <meta name="author" content="Julio Andrés Palma Quezada" />
 
-    <!-- Trabajar con Bootstrap, Jquery, Ajax y javaScript  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -74,10 +73,10 @@
     </nav>
 
     <!-- Carousel o diapositivas-->
-    <div id="demo" class="carousel slide" data-ride="carousel">
+    <section id="demo" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/img/carousel1.jpg" alt="Los Angeles" width="100%" height="30px" data-toggle="tooltip" data-placement="right" title="">
+                <img src="assets/img/carousel1.jpg" alt="Los Angeles" width="100%" height="30px" data-toggle="tooltip" data-placement="right" title="Altiplano">
             </div>
             <div class="carousel-item">
                 <img src="assets/img/carousel2.jpg" alt="Chicago" width="100%" height="200" data-toggle="tooltip" data-placement="right" title="Moáis en la isla de pascua">
@@ -94,7 +93,7 @@
         <a class="carousel-control-next" href="#demo" data-slide="next">
             <span class="carousel-control-next-icon" data-toggle="tooltip" data-placement="right" title="Siguiente"></span>
         </a>
-    </div>
+    </section>
 
     <!-- Título de Quiénes somos. Se oculta al tener un tamamio menor a md-->
     <h1 class="quienessomos py-5 text-white d-none d-md-block" id="dos">¿Quiénes Somos?</h1>
@@ -103,7 +102,7 @@
     <hr class="bg-info py-1 mx-2 d-none d-md-block">
 
     <!-- Tarjetas de quiénes somos, estas tarjetas se ocultan al tener un tamamio menor a md -->
-    <div class="container-fluid py-3 d-none d-md-block">
+    <section class="container-fluid py-3 d-none d-md-block">
         <div class="card-deck">
             <div class="card border-0">
                 <div class="card-body">
@@ -145,7 +144,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--Titulo de Destacados -->
     <h1 class="quienessomos py-5 text-white" id="tres">Destacados</h1>
@@ -154,7 +153,7 @@
     <hr class="bg-info py-1 mx-2">
 
     <!-- contenedor de cards-->
-    <div class="container-fluid">
+    <section class="container-fluid">
         <!-- Fila -->
         <div class="row">
             <!-- Columna y tarjetas 1-->
@@ -213,7 +212,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--Titulo de Contacto -->
     <h1 class="quienessomos py-5 text-white" id="cuatro">Contacto</h1>
@@ -222,7 +221,7 @@
     <hr class="bg-info py-1 mx-2">
 
     <!-- Formulario de contacto -->
-    <div class="container alinearFormulario">
+    <section class="container alinearFormulario">
         <form>
             <!-- Nombre y Apellido -->
             <div class="form-row">
@@ -230,6 +229,7 @@
                     <label for="inputEmail4" class="text-white">Nombre</label>
                     <input type="text" class="form-control" placeholder="Ingresa tu Nombre">
                 </div>
+                <br>
                 <div class="col-md-6">
                     <label for="inputEmail4" class="text-white">Apellido</label>
                     <input type="text" class="form-control" placeholder="Ingresa tu Apellido">
@@ -245,7 +245,6 @@
             </div>
 
             <!-- Teléfono -->
-
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputAddress" class="text-white">Teléfono</label>
@@ -255,8 +254,8 @@
 
             <!-- Comentario -->
             <div class="form-group">
-                <label for="exampleFormControlTextarea1" class="text-white"> Ingresa tu Comentario... </label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingresa aquí tu comentario"></textarea>
+                <label for="exampleFormControlTextarea1" class="text-white"> Ingresa tu Comentario</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingresa aquí tu comentario..."></textarea>
             </div>
             <br>
 
@@ -265,38 +264,36 @@
                 <div class="form-group col-md-4 text-white">
                     <label for="inputState">Selecciona tu lugar favorito</label>
                     <select id="inputState" class="form-control">
-                    <option selected>Lugares de Chile...</option>
-                    <option>Zona norte</option>
-                    <option >Zona Centro</option>
-                    <option >Zona Sur</option>
-                    <option >Isla de Pascua</option>
-                    <option >La Antártida</option>
-                  </select>
+                        <option selected>Lugares de Chile...</option>
+                        <option>Zona Norte</option>
+                        <option >Zona Centro</option>
+                        <option >Zona Sur</option>
+                        <option >Isla de Pascua</option>
+                        <option >La Antártida</option>
+                    </select>
                 </div>
             </div>
+
             <!-- Boton de Enviar -->
             <button type="submit" class="btn btn-primary my-lg-4 text-md-center mb-5" data-toggle="tooltip" data-placement="right" title="Enviar información ingresada en el formulario"> Enviar </button>
+
         </form>
-    </div>
+    </section>
 
     <!-- Footer -->
-    <footer>
-        <section>
-            <div class="container-fluid bg-info py-3">
-                <div class="row">
-                    <div class="col-lg-5 text-center  margintop">
-                        <p class="h2 text-white ">VIAJES CHILE</p>
-                    </div>
-                    <!-- Iconos pie de pagina -->
-                    <div class="col-lg-7 margintop col-12 text-center">
-                        <a href="https://github.com/" target="_blank"><i class="fab fa-brands fa-github-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Github"></i></a>
-                        <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fa-brands fa-linkedin fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Linkedin"></i></a>
-                        <a href="https://twitter.com/" target="_blank"> <i class="fab fa-brands fa-twitter-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Twitter"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank"> <i class="fab fa-brands fa-facebook-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Facebook"></i></a>
-                    </div>
-                </div>
+    <footer class="container-fluid bg-info py-3">
+        <div class="row">
+            <div class="col-lg-5 text-center col-12">
+                <p class="h2 text-white ">VIAJES CHILE</p>
             </div>
-        </section>
+            <!-- Iconos pie de pagina -->
+            <div class="col-lg-7 col-12 text-center">
+                <a href="https://github.com/" target="_blank"><i class="fab fa-brands fa-github-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Github"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fa-brands fa-linkedin fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Linkedin"></i></a>
+                <a href="https://twitter.com/" target="_blank"> <i class="fab fa-brands fa-twitter-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Twitter"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"> <i class="fab fa-brands fa-facebook-square fa-3x ml-4 text-white" data-toggle="tooltip" data-placement="right" title="Ir a Facebook"></i></a>
+            </div>
+        </div>
     </footer>
 
     <!-- CDN de JS -->
